[OKRE-104] - feat(gcs): create error simulation interceptor for the gcs twin server
